@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#6007] Stop upgrade from overwriting session_cookie_path system setting
 - [#5998] Add "Create File" option for stream-based media sources
 - [#4794] Add custom Permissions for restricting creation of core derivative Resource Types
 - [#4958] Add Resource ID to node of Resource in Resource Groups tree
